tests/expectations/parser/program/hex_eof.out
Error [EPAR0370005]: expected ';' -- found '}'
    --> test:5:1
     |
   5 | }
     | ^
